test/memory/shannon/freedWithoutMalloc.good
freedWithoutMalloc.chpl:5: error: memtrack fault: invalid memory free
